Create partial user API route (#33)
