# docs/swagger.yaml
@@ -21,6 +21,21 @@ definitions:
         example: cb7bc97f-45b0-4972-8edf-dc7300cc059c
         type: string
     type: object
+  models.PartialUser:
+    properties:
+      created_at:
+        example: "1977-04-22T06:00:00Z"
+        type: string
+      first_name:
+        example: Henri
+        type: string
+      is_verified:
+        example: true
+        type: boolean
+      last_name:
+        example: Martin
+        type: string
+    type: object
   models.StripeIdentityVerificationResponse:
     properties:
       id:
@@ -117,6 +132,9 @@ definitions:
       stripe_payment_method_id:
         example: pm_1Ho8k8CMhQMU3AqAKJwPYAXj
         type: string
+      user_verifications:
+        $ref: '#/definitions/models.UserVerifications'
+        type: object
       zip:
         example: "59000"
         type: string
@@ -133,6 +151,23 @@ definitions:
   models.UserResetPasswordBody:
     properties:
       password:
+        type: string
+    type: object
+  models.UserVerifications:
+    properties:
+      is_verified:
+        example: true
+        type: boolean
+      stripe_person_id:
+        example: vip_IRVyOgajqmYpMq
+        type: string
+      user_id:
+        example: cb7bc97f-45b0-4972-8edf-dc7300cc059c
+        type: string
+      verification_type:
+        example: identity_document
+        type: string
+      verified_at:
         type: string
     type: object
 info:
@@ -445,6 +480,29 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorResponse'
       summary: Create Stripe link intent to validate identity for a given user
+      tags:
+      - Users
+  /user/{user_id}/partial:
+    get:
+      description: Get partial user object data from database
+      parameters:
+      - description: User ID
+        in: query
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.PartialUser'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Get partial user by its id
       tags:
       - Users
   /user/{user_id}/reset/password:
